--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,20 @@
   overflow: hidden;
   color: var(--black);
 }
+.button {
+  background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
+  box-shadow: 0px 0px 15px 3px rgba(251, 161, 40, 0.42);
+  color: white;
+  border: none;
+  padding: 11px 35px;
+  border-radius: 34px;
+  font-size: 16px;
+  /* font-weight: bold; */
+  cursor: pointer;
+}
+
+.button:hover {
+  background: white;
+  color: var(--orange);
+  border: 1px solid var(--orange);
+}
